🚀🚀🚀 feat:  atk-datatable / sidebar-bash-config💥 ---------------------------------------- + integrate sidebar-bash-config with datatable + add atk-datatable component with IBashColumn + implement sidebar-bash-config with tabs and actions + connect via SidebarBashConfigService (signals) ---------------------------------------- -> test successful on http://localhost:8000/api/v3/account (139 items loaded in 948ms)

--- a/atkm/src/app/shared/components/atk-bash/atk-bash.component.html
+++ b/atkm/src/app/shared/components/atk-bash/atk-bash.component.html
@@ -54,7 +54,9 @@
         </div>
       </div>
     </section>
-    <button (click)="testLoadData()">🧪 Test Load Account Data</button>
+
+    <!-- <button (click)="testLoadData()">🧪 Test Load Account Data</button> -->
+
     <!-- ======================= -->
     <!-- TABLE SECTION -->
     <!-- ======================= -->
