--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -111,6 +111,9 @@
   </div>
 </div>
 
-<atk-sidebar-config />
+<!-- <atk-sidebar-config /> -->
+
 <!-- <atk-sidebar-config [sections]="config().configPanel.sections" [isCollapsed]="config().configPanel.isCollapsed"
   (togglePanel)="toggleConfigPanel()" /> -->
+
+<atk-sidebar-bash-config [isCollapsed]="configPanelCollapsed()" (togglePanel)="toggleConfigPanel()" />
