--- a/atkm/src/app/shared/components/atk-datatable/atk-datatable.component.html
+++ b/atkm/src/app/shared/components/atk-datatable/atk-datatable.component.html
@@ -6,17 +6,19 @@
       [ngClass]="column.cssClass">
       {{ column.label }}
       @if (column.sortable) {
+      <!-- [style.width]="isLast ? 'calc(' + (column.width || 'auto') + ' + 15px)' : (column.width || 'auto')" -->
       <span class="sort-indicator">↕</span>
       }
     </div>
     }
+    <div class="scrollbar-spacer"></div>
   </div>
 
   <!-- Table Body -->
   @if (data().length > 0) {
   <div class="datatable-body">
     @for (row of data(); track trackByIndex($index, row)) {
-    <div class="datatable-row">
+    <div class="datatable-row" [class.selected]="isRowSelected(row)" (dblclick)="onRowDoubleClick(row)">
       @for (column of columns(); track column.key) {
       <div class="datatable-cell" [style.width]="column.width || 'auto'" [class]="'align-' + (column.align || 'left')"
         [ngClass]="column.cssClass">
